--- a/stack/stack.yml
+++ b/stack/stack.yml
@@ -1,23 +1,23 @@
 version: "3.8"
 
 services:
-  pgmoreno:
-    image: pgmoreno:latest
+  pgjoelo:
+    image: pgjoelo:latest
     build: .
     deploy:
       replicas: 1
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.pgmoreno.entrypoints=http"
-        - "traefik.http.routers.pgmoreno.rule=Host(`pgmoreno.byronrm.com`)"
-        - "traefik.http.middlewares.pgmoreno-https-redirect.redirectscheme.scheme=https"
-        - "traefik.http.routers.pgmoreno.middlewares=pgmoreno-https-redirect"
-        - "traefik.http.routers.pgmoreno-secure.entrypoints=https"
-        - "traefik.http.routers.pgmoreno-secure.rule=Host(`pgmoreno.byronrm.com`)"
-        - "traefik.http.routers.pgmoreno-secure.tls=true"
-        - "traefik.http.routers.pgmoreno-secure.tls.certresolver=http"
-        - "traefik.http.routers.pgmoreno-secure.service=pgmoreno"
-        - "traefik.http.services.pgmoreno.loadbalancer.server.port=80"
+        - "traefik.http.routers.pgjoelo.entrypoints=http"
+        - "traefik.http.routers.pgjoelo.rule=Host(`pgjoelo.byronrm.com`)"
+        - "traefik.http.middlewares.pgjoelo-https-redirect.redirectscheme.scheme=https"
+        - "traefik.http.routers.pgjoelo.middlewares=pgjoelo-https-redirect"
+        - "traefik.http.routers.pgjoelo-secure.entrypoints=https"
+        - "traefik.http.routers.pgjoelo-secure.rule=Host(`pgjoelo.byronrm.com`)"
+        - "traefik.http.routers.pgjoelo-secure.tls=true"
+        - "traefik.http.routers.pgjoelo-secure.tls.certresolver=http"
+        - "traefik.http.routers.pgjoelo-secure.service=pgjoelo"
+        - "traefik.http.services.pgjoelo.loadbalancer.server.port=8089"
         - "traefik.docker.network=traefik-public"
     networks:
       - traefik-public
