--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -76,5 +76,5 @@ jobs:
         username: ${{ secrets.VPS_USER }}
         password: ${{ secrets.VPS_PASSWORD }}
         port: ${{ secrets.VPS_SSH_PORT }}
-        source: "stack.yml"
+        source: "stack/stack.yml"  # Actualiza la ruta al archivo dentro de la carpeta stack
         target: "/home/${{ secrets.VPS_USER }}/deploy1"
